--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <link rel="stylesheet" href="css/style.css">
 <body>
   <h1>素敵カフェ</h1>
-  <P>UI/UXデザイン ドットインストールで勉強中です」</P>
+  <P>UI/UXデザイン ドットインストールで勉強中です WiFiもあります</P>
 </body>
 </html>
